First Commit - Working Program with no Input Function

--- a/ADS103 A3 HEW_Jeremy.vcxproj
+++ b/ADS103 A3 HEW_Jeremy.vcxproj
@@ -140,7 +140,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AVL.cpp" />
+    <ClCompile Include="BST.cpp" />
+    <ClCompile Include="NumbersNode.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AVL.h" />
+    <ClInclude Include="BST.h" />
+    <ClInclude Include="NumbersNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
